--- a/backend/app/templates/email_verified.html
+++ b/backend/app/templates/email_verified.html
@@ -14,8 +14,8 @@
             {{ success }}
         </div>
         <div class="text-center">
-            <a href="/login" class="text-indigo-600 hover:text-indigo-500">
-                Go to Login
+            <a href="/dashboard" class="text-indigo-600 hover:text-indigo-500">
+                Go to Dashboard
             </a>
         </div>
         {% endif %}
