--- a/backend/app/templates/register.html
+++ b/backend/app/templates/register.html
@@ -76,7 +76,7 @@
     <!-- Footer -->
     <div class="text-center mt-6">
       <span class="text-gray-600">Already have an account?</span>
-      <a href="/login" class="text-indigo-600 hover:text-indigo-700 font-medium ml-1">Sign in</a>
+      <a href="/" class="text-indigo-600 hover:text-indigo-700 font-medium ml-1">Sign in</a>
     </div>
   </div>
 </div>
